fix(sbb-button): fix high contrast styles (#2890)

--- a/src/elements/button/common/button-common.scss
+++ b/src/elements/button/common/button-common.scss
@@ -52,6 +52,32 @@ $icon-only: ':where([data-slot-names~=icon], [icon-name]):not([data-slot-names~=
   @include sbb.if-forced-colors {
     --sbb-button-color-default-border: CanvasText !important;
     --sbb-button-color-active-border: Highlight !important;
+    --sbb-button-color-default-background: Canvas !important;
+    --sbb-button-color-hover-background: Canvas !important;
+    --sbb-button-color-active-background: Canvas !important;
+    --sbb-button-color-disabled-background: Canvas !important;
+    --sbb-button-color-disabled-text: GrayText !important;
+
+    // For static cases, button and link roles will override it.
+    --sbb-button-color-default-text: CanvasText !important;
+    --sbb-button-color-hover-text: CanvasText !important;
+    --sbb-button-color-active-text: CanvasText !important;
+  }
+}
+
+:host([data-button]) {
+  @include sbb.if-forced-colors {
+    --sbb-button-color-default-text: ButtonText !important;
+    --sbb-button-color-hover-text: ButtonText !important;
+    --sbb-button-color-active-text: ButtonText !important;
+  }
+}
+
+:host([data-link]) {
+  @include sbb.if-forced-colors {
+    --sbb-button-color-default-text: LinkText !important;
+    --sbb-button-color-hover-text: LinkText !important;
+    --sbb-button-color-active-text: LinkText !important;
   }
 }
 
@@ -83,12 +109,6 @@ $icon-only: ':where([data-slot-names~=icon], [icon-name]):not([data-slot-names~=
   --sbb-button-padding-inline: 0;
 }
 
-:host([disabled]) {
-  @include sbb.if-forced-colors {
-    --sbb-button-color-disabled-text: GrayText !important;
-  }
-}
-
 :host(:not([disabled], :active, [data-active]):hover) {
   @include sbb.hover-mq($hover: true) {
     --sbb-button-translate-y-content-hover: #{sbb.px-to-rem-build(-1)};
@@ -101,18 +121,6 @@ $icon-only: ':where([data-slot-names~=icon], [icon-name]):not([data-slot-names~=
 
   @include sbb.if-forced-colors {
     --sbb-button-color-hover-border: Highlight !important;
-  }
-}
-
-:host([role='button']) {
-  @include sbb.if-forced-colors {
-    --sbb-button-color-default-text: ButtonText !important;
-    --sbb-button-color-hover-text: ButtonText !important;
-    --sbb-button-color-active-text: ButtonText !important;
-    --sbb-button-color-default-background: Canvas !important;
-    --sbb-button-color-hover-background: Canvas !important;
-    --sbb-button-color-active-background: Canvas !important;
-    --sbb-button-color-disabled-background: Canvas !important;
   }
 }
 
