--- a/src/elements/core/styles/mixins/buttons.scss
+++ b/src/elements/core/styles/mixins/buttons.scss
@@ -48,49 +48,38 @@
 
 // Variables used in the icon-button
 @mixin icon-button-variables {
+  --sbb-button-color-text: var(--sbb-color-charcoal);
   --sbb-button-color-default-background: var(--sbb-color-black-alpha-0);
-  --sbb-button-color-default-border: var(--sbb-color-black-alpha-0);
-  --sbb-button-color-default-text: var(--sbb-color-charcoal);
   --sbb-button-color-hover-background: var(--sbb-color-milk);
-  --sbb-button-color-hover-border: var(--sbb-color-milk);
-  --sbb-button-color-hover-text: var(--sbb-color-charcoal);
   --sbb-button-color-active-background: var(--sbb-color-cloud);
-  --sbb-button-color-active-border: var(--sbb-color-cloud);
-  --sbb-button-color-active-text: var(--sbb-color-charcoal);
   --sbb-button-color-disabled-background: var(--sbb-color-milk);
   --sbb-button-color-disabled-border: var(--sbb-color-smoke);
   --sbb-button-color-disabled-text: var(--sbb-color-granite);
-  --sbb-button-border-style: solid;
+  --sbb-button-border-disabled-width: var(--sbb-border-width-1x);
   --sbb-button-border-disabled-style: dashed;
-  --sbb-button-border-width: #{functions.px-to-rem-build(0)};
   --sbb-button-border-radius: var(--sbb-border-radius-infinity);
   --sbb-button-transition-duration: var(
     --sbb-disable-animation-zero-time,
     var(--sbb-animation-duration-2x)
   );
   --sbb-button-transition-easing-function: var(--sbb-animation-easing);
-  --sbb-button-inset: 0;
 
   @include a11y.if-forced-colors {
-    --sbb-button-color-default-text: ButtonText !important;
-    --sbb-button-color-default-border: CanvasText !important;
-    --sbb-button-color-active-text: ButtonText !important;
-    --sbb-button-color-active-border: Highlight !important;
-    --sbb-button-color-hover-text: ButtonText !important;
+    --sbb-button-color-text: ButtonText !important;
+    --sbb-button-color-hover-background: Highlight !important;
+    --sbb-button-color-active-background: Highlight !important;
+    --sbb-button-color-disabled-background: Canvas !important;
+    --sbb-button-color-disabled-border: GrayText !important;
+    --sbb-button-color-disabled-text: GrayText !important;
   }
 }
 
 // Variables used in the icon-button negative variant
 @mixin icon-button-variables-negative {
+  --sbb-button-color-text: var(--sbb-color-milk);
   --sbb-button-color-default-background: var(--sbb-color-black-alpha-0);
-  --sbb-button-color-default-border: var(--sbb-color-black-alpha-0);
-  --sbb-button-color-default-text: var(--sbb-color-milk);
   --sbb-button-color-hover-background: var(--sbb-color-charcoal);
-  --sbb-button-color-hover-border: var(--sbb-color-charcoal);
-  --sbb-button-color-hover-text: var(--sbb-color-milk);
   --sbb-button-color-active-background: var(--sbb-color-iron);
-  --sbb-button-color-active-border: var(--sbb-color-iron);
-  --sbb-button-color-active-text: var(--sbb-color-milk);
   --sbb-button-color-disabled-background: var(--sbb-color-black-alpha-0);
   --sbb-button-color-disabled-border: var(--sbb-color-smoke);
   --sbb-button-color-disabled-text: var(--sbb-color-smoke);
@@ -115,23 +104,21 @@
       transition-timing-function: var(--sbb-button-transition-easing-function);
       transition-property: color;
       border-radius: var(--sbb-button-border-radius);
-      color: var(--sbb-button-color-default-text);
+      color: var(--sbb-button-color-text);
       cursor: pointer;
       user-select: none;
       display: flex;
 
-      // Renders background and border in the background absolute to enable the hover animation
+      // Renders background in the background absolute to enable the hover animation
       &::before {
         position: absolute;
         content: '';
-        inset: var(--sbb-button-inset);
-        border: var(--sbb-button-border-width) var(--sbb-button-border-style)
-          var(--sbb-button-color-default-border);
+        inset: 0;
         border-radius: var(--sbb-button-border-radius);
         background-color: var(--sbb-button-color-default-background);
         transition-duration: var(--sbb-button-transition-duration);
         transition-timing-function: var(--sbb-button-transition-easing-function);
-        transition-property: inset, background-color, border-color;
+        transition-property: inset, background-color;
       }
     }
   }
@@ -148,12 +135,6 @@
 
 // Disabled state for icon-button in form-field
 @mixin icon-button-disabled($button-selector) {
-  --sbb-button-border-width: var(--sbb-border-width-1x);
-
-  @include a11y.if-forced-colors {
-    --sbb-button-color-disabled-text: GrayText !important;
-  }
-
   #{$button-selector} {
     color: var(--sbb-button-color-disabled-text);
     cursor: default;
@@ -162,8 +143,8 @@
 
   #{$button-selector}::before {
     background-color: var(--sbb-button-color-disabled-background);
-    border-color: var(--sbb-button-color-disabled-border);
-    border-style: var(--sbb-button-border-disabled-style);
+    border: var(--sbb-button-border-disabled-width) var(--sbb-button-border-disabled-style)
+      var(--sbb-button-color-disabled-border);
   }
 }
 
@@ -179,21 +160,9 @@
     --sbb-button-translate-y-content-hover: #{functions.px-to-rem-build(-1)};
   }
 
-  @include a11y.if-forced-colors {
-    --sbb-button-color-hover-border: Highlight !important;
-  }
-
   #{$button-selector}::before {
     @include mediaqueries.hover-mq($hover: true) {
-      inset: calc(var(--sbb-button-border-width) * -1);
       background-color: var(--sbb-button-color-hover-background);
-      border-color: var(--sbb-button-color-hover-border);
-    }
-  }
-
-  #{$button-selector} {
-    @include mediaqueries.hover-mq($hover: true) {
-      color: var(--sbb-button-color-hover-text);
     }
   }
 }
@@ -201,8 +170,6 @@
 // Active state for icon-button in form-field
 @mixin icon-button-active($button-selector) {
   #{$button-selector}::before {
-    color: var(--sbb-button-color-active-text);
     background-color: var(--sbb-button-color-active-background);
-    border-color: var(--sbb-button-color-active-border);
   }
 }
