--- a/src/elements/datepicker/datepicker-previous-day/datepicker-previous-day.scss
+++ b/src/elements/datepicker/datepicker-previous-day/datepicker-previous-day.scss
@@ -3,14 +3,6 @@
 // Box-sizing rules contained in typography are not traversing Shadow DOM boundaries. We need to include box-sizing mixin in every component.
 @include sbb.box-sizing;
 
-:host {
-  display: flex;
-
-  // Use !important here to not interfere with Firefox focus ring definition
-  // which appears in normalize css of several frameworks.
-  outline: none !important;
-}
-
 @include sbb.icon-button('.sbb-datepicker-previous-day', 'sbb-icon');
 
 .sbb-datepicker-previous-day {
